<resources>
    <string name="app_name">Learning Task 3.1. Kyanu Kho</string>
    <string name="textview">Avatar</string>
    <string name="textview2">Hacker1</string>
    <string name="textview3">Hacker2</string>
    <string name="textview4">Hacker3</string>
    <string name="textview5">Hacker4</string>
    <string name="textview6">Hacker5</string>
    <string name="textview7">Hacker6</string>
    <string name="Icon_Description">Icon Holder</string>
</resources>